# krone-groups-server

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  design-spec.md
deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
examples/: gen_vectors.rs
migrations/: 0001_init.sql  0002_rate_limit.sql  0003_drop_rate_buckets.sql  0004_seen_signatures.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: mod.rs  signed_request.rs
src/crypto/: fingerprint.rs  mod.rs  signature.rs  signing_input.rs
src/db/: mod.rs  queries.rs
src/jobs/: reaper.rs
src/protocol/: common.rs  device.rs  envelope.rs  error.rs  mod.rs  server_info.rs
src/routes/: devices.rs  envelopes.rs  health.rs  mod.rs  response_sign.rs  server_info.rs
tests/: devices.rs  e2e.rs  envelopes_flow.rs  health.rs  protocol_schema.rs  protocol_vectors.rs  rate_limit.rs  reaper.rs  replay.rs  server_info.rs
tests/common/: mod.rs  signing.rs
